# fem-rs

./: .gitmodules  Cargo.toml  DESIGN_PLAN.md  MFEM_ALIGNMENT_TRACKER.md  MFEM_MAPPING.md  README.md  TECHNICAL_SPEC.md
.cargo/: config.toml
.github/workflows/: alignment-smoke.yml  ci.yml  io-parity-hdf5.yml
crates/amg/: Cargo.toml
crates/amg/src/: lib.rs
crates/assembly/: Cargo.toml
crates/assembly/src/: assembler.rs  complex.rs  dg.rs  discrete_op.rs  grid_function.rs  interior_faces.rs  lib.rs  mixed.rs  nonlinear.rs  partial.rs  postprocess.rs
crates/assembly/src/standard/: elasticity.rs  mod.rs
crates/assembly/tests/: high_order_discrete_op.rs  periodic_bc.rs  poisson.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  point.rs  scalar.rs  types.rs
crates/element/: Cargo.toml
crates/element/src/: lib.rs  quadrature.rs  reference.rs
crates/element/src/lagrange/: mod.rs  quad.rs  seg.rs  tet.rs  tri.rs
crates/element/src/nedelec/: mod.rs  tet.rs  tri.rs
crates/element/src/raviart_thomas/: mod.rs  tet.rs  tri.rs
crates/element/tests/: element_tests.rs
crates/io/: Cargo.toml
crates/io/src/: gmsh.rs  lib.rs  matrix_market.rs
crates/linalg/: Cargo.toml
crates/linalg/src/: block.rs  coo.rs  csr.rs  lib.rs  vector.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: amr.rs  boundary.rs  curved.rs  element_type.rs  lib.rs  simplex.rs  topology.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: lib.rs  metis.rs  par_ras.rs
crates/parallel/tests/: ras_benchmark.rs  thread_launcher.rs
crates/solver/: Cargo.toml
crates/solver/src/: block.rs  eigen.rs  lib.rs  ode.rs
crates/solver/tests/: operator_gmres.rs
crates/space/: Cargo.toml
crates/space/src/: constraints.rs  dof_manager.rs  h1_trace.rs  hcurl.rs  hdiv.rs  lib.rs  vector_h1.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ras-ddm-status-2026-04-19.md
examples/: Cargo.toml  em_electrostatics.rs  em_magnetostatics_2d.rs  ex10_heat_equation.rs  ex13_eigenvalue.rs  ex15_tet_nc_amr.rs  ex16_nonlinear_heat.rs  ex1_poisson.rs  ex22_complex.rs  ex2_elasticity.rs  ex39_named_attributes.rs  ex3_maxwell.rs  ex41_imex.rs  ex5_mixed_darcy.rs  ex9_dg_advection.rs  mfem_ex10_heat_equation.rs  mfem_ex10_maxwell_time.rs  mfem_ex10_wave_equation.rs  mfem_ex13.rs  mfem_ex13_eigenvalue.rs  mfem_ex14_dc_current.rs  mfem_ex15_dg_amr.rs  mfem_ex15_dynamic_amr.rs  mfem_ex15_tet_nc_amr.rs  mfem_ex16_nonlinear_heat.rs  mfem_ex17_dg_elasticity.rs  mfem_ex18_euler.rs  mfem_ex19.rs  mfem_ex1_convergence.rs  mfem_ex1_poisson.rs  mfem_ex22.rs  mfem_ex25.rs  mfem_ex26_geom_mg.rs  mfem_ex2_elasticity.rs  mfem_ex3.rs  mfem_ex31.rs  mfem_ex32.rs  mfem_ex33_fractional_laplacian.rs  mfem_ex33_tangential_drive_maxwell.rs  mfem_ex34.rs  (+23 more)
examples/meshes/: coaxial.geo  square_conductor.geo  transformer.geo
examples/src/: lib.rs  maxwell.rs
scripts/: run_mfem_examples.ps1
