[package]
name    = "fem-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../crates/core" }
fem-mesh   = { path = "../crates/mesh" }
fem-linalg = { path = "../crates/linalg" }
fem-io     = { path = "../crates/io" }
log        = { workspace = true }
env_logger = { workspace = true }

[[example]]
name = "em_electrostatics"
path = "em_electrostatics.rs"

[[example]]
name = "em_magnetostatics_2d"
path = "em_magnetostatics_2d.rs"

[lib]
name = "fem_examples"
path = "src/lib.rs"
