[package]
name    = "fem-parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core     = { path = "../core" }
fem-mesh     = { path = "../mesh" }
fem-linalg   = { path = "../linalg" }
fem-assembly = { path = "../assembly" }
fem-amg      = { path = "../amg" }
log          = { workspace = true }

[features]
default = []
mpi     = ["dep:mpi"]

[dependencies.mpi]
version  = "0.8"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }
